# Custom_AI

./: CMakeLists.txt  README.md
include/: compute.h  nn.h  nn_activation.h  nn_compute.h  nn_headers.h  nn_inline.h  nn_interface.h  nn_weight.h  nn_weight_and_activation_functions.h
old_files/: nn_activation.h  nn_weight.h  waiting list.h
src/: activations_functions.cpp  compute.cpp  main.cpp  nn.cpp  nn_activation.cpp  nn_error.cpp  nn_shaping.cpp  nn_solve.cpp  nn_weight.cpp
tests/: main.cpp  xor.cpp  xor.h
